# chan_discord

./: Cargo.toml  README.md  asterisk_wrapper.c  asterisk_wrapper.h  build.rs
asterisk/: Cargo.toml  README.md
asterisk-sys/: Cargo.toml  asterisk_wrapper.h  build.rs
asterisk-sys/src/: lib.rs
asterisk/src/: astobj2.rs  channel.rs  config.rs  formats.rs  jitterbuffer.rs  lib.rs  logger.rs  macros.rs
chan_discord/: Cargo.toml
chan_discord/src/: call.rs  channel_tech.rs  lib.rs  queue_thread.rs  rtp_receiver.rs  thread.rs
chan_discord_common/: Cargo.toml
chan_discord_common/src/: constants.rs  error.rs  lib.rs
chan_discord_common/src/discord/: mod.rs  rtp.rs  voice_gateway.rs  voice_task.rs
chan_discord_common/src/utils/: mod.rs  rtp.rs  rtp_log.rs
src/: call.rs  error.rs  lib.rs  thread.rs
src/asterisk/: astobj2.rs  chan_discord.rs  channel.rs  config.rs  formats.rs  logger.rs  mod.rs
src/discord/: crypto.rs  mod.rs  rtp.rs  voice_gateway.rs  voice_task.rs
src/utils/: mod.rs  request_channel.rs
