[package]
name = "chan_discord_common"
version = "0.1.0"
edition = "2021"

[features]
rtplog = ["dep:rusqlite"]

[dependencies]
discortp = { version = "0.6.0", features = ["discord-full"] }
crypto_secretbox = "0.1.1"
serenity-voice-model = "0.2.0"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = { version = "0.15.4", features = ["native"], default-features = false }
twilight-http = { version = "0.15.4", features = ["native"], default-features = false }
twilight-model = "0.15.4"
anyhow = "1.0.86"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
tokio = { version = "1.38.0", features = ["macros"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
log = "0.4.22"
futures-util = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.120"
hex = "0.4.3"
thiserror = "1.0.61"
tokio-util = "0.7.11"
